# safe_sql

./: README.md  pyproject.toml
safe_sql/: main.py
